Update base.css to fix Z-Index issue with nav bar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,6 +29,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 10;
 }
 #nav-bar {
     width: 100%;
